# build-extlibs

./: .gitignore  2012Q4  2013Q1  2014Q1  2014Q3  2015Q1  2015Q2  2016Q2  2017Q2  2019Q2  2020Q1-small  2022Q2  5034  5034-pdl  5040  50401  README.md  README_old.md  bharfbuz  blibgd  build.sh  cairo  cfitsio  download-sources.sh  msys2_shell_483_32.bat  msys2_shell_483_64.bat  msys2_shell_492_32.bat  msys2_shell_492_64.bat  msys2_shell_710_64.bat  openssl  openssl11  openssl111  pack-sdl.pl  pack.pl  process_build_artefacts.pl  repack.sh  sdl2011  sdl2013  sources.list
archive/: 2013Q2  2013Q3  2014Q2  2015Q1  2015Q4  2019Q2  msys2_shell_483_32.bat  msys2_shell_483_64.bat  msys2_shell_492_64.bat  msys2_shell_710_32.bat  msys2_shell_830_32.bat  msys2_shell_830_64.bat  openssl  openssl11
mysql.special/: _INFO_  go-5.5.11.bat  libmysql-5.1.44-win32.def  libmysql-5.1.44-winx64.def  libmysql-5.5.11-win32.def  libmysql-5.5.11-winx64.def  todo.txt
patches/SDL-1.2.14/: sdl-config.bat.win-gcc
patches/SDL_Pango-0.1.2/: Makefile.win-gcc  SDL_Pango.pc.win-gcc
patches/SDL_gfx-2.0.20/: Makefile.in  SDL_gfxPrimitives.c
patches/SDL_mixer-1.2.11/: configure
patches/SDL_sound-1.0.3/: Makefile.in  Makefile.win-gcc  config.h.win-gcc
patches/SDL_svg-1.2.0/: Makefile.win-gcc  configure
patches/SDL_vnc-1.0.0/: SDL_vnc.c
patches/boost_1_55_0/: boost-1.55.0-log_fix_dump_avx2.patch
patches/bzip2-1.0.6/: Makefile.win-gcc
patches/cfitsio-3.37/: cfit3370.diff
patches/cfitsio-3.38/: cfit3370.diff
patches/cfitsio-3.41/: cfitsio-3.41.diff
patches/cfitsio-3.45/: cfitsio-3.41.diff
patches/cfitsio-3.47/: cfitsio-3.47.diff
patches/cfitsio-3.48/: cfitsio-3.48.diff
patches/db-6.2.38/: db-6.2.38-mingw.patch
patches/dmake-SVN20091127/: configure
patches/expat-2.2.0/: expat-2.2.0-CVE-2016-0718-regression.patch
patches/flac-1.2.1/: configure
patches/fontconfig-2.7.3/: Makefile.win-gcc  config.h.win-gcc  dll_version.c.win-gcc  dll_version_res.rc.win-gcc
patches/freetype-2.3.11/: Makefile.win-gcc  dll_version.c.win-gcc  dll_version_res.rc.win-gcc  freetype-config.bat.win-gcc  freetype2.pc.win-gcc
patches/freetype-2.4.4/: freetype-config.bat.win-gcc
patches/freetype-2.5.2/: freetype-config.bat.win-gcc
patches/freetype-2.5.3/: freetype-config.bat.win-gcc
patches/freetype-2.5.5/: freetype-config.bat.win-gcc
patches/gd-2.0.35/: Makefile.in  Makefile.win-gcc  config.h.win-gcc  configure  dll_version.c.win-gcc  dll_version_res.rc.win-gcc  gdlib-config.bat.win-gcc  gdlib-config.win-gcc
patches/gdb/: gdb-fix-display-tabs-on-mingw.patch  gdb-mingw-gcc-4.7.patch  gdb-perfomance.patch  gdb-wrapper.sh  gdb.sh
patches/gdbm-1.10/: MINGW-packages.URL  gdbm-win32-support-V2.patch
patches/gdbm-1.11/: gdbm-win32-support.patch
patches/gdbm-1.13/: gdbm-1.13.diff
patches/gdbm-1.18/: gdbm-1.18_KMX.diff
patches/gdbm-1.8.3/: Makefile.in  Makefile.win-gcc  Makefile_compat.win-gcc  autoconf.h.win-gcc  dbminit.c  dbmopen.c  dll_version_info.rc.win-gcc  gdbmreorg.c  readme.txt  systems.h
patches/giflib-4.1.6/: Makefile.win-gcc  config.h.win-gcc  dll_version.c.win-gcc  dll_version_res.rc.win-gcc
patches/giflib-5.0.6/: giflib-5.0.6.patch
patches/giflib-5.1.9/: giflib-5.1.9.diff
patches/gnuplot-4.6.5/: gnuplot-4.6.5.patch  makefile.patch
patches/gnuplot-4.6.7/: gnuplot-4.6.6.diff
patches/gnuplot-5.0.0/: gnuplot-5.0.0.diff
patches/gnuplot-5.0.6/: gnuplot-5.0.6.diff
patches/gnuplot-5.2.6/: gnuplot.patch
patches/gnuplot-6.0.0/: 01-gnuplot.patch
patches/gsl-1.14/: gsl-config.bat.win-gcc
patches/gsl-1.16/: gsl-config.bat.win-gcc
patches/gsl-2.0/: gsl-config.bat.win-gcc
patches/gsl-2.3/: gsl-config.bat.win-gcc
patches/gsl-2.5/: gsl-config.bat.win-gcc
patches/gsl-2.6/: gsl-config.bat.win-gcc
patches/hdf-4.2.10/: configure
patches/hdf-4.2.10/mfhdf/dumper/: CMakeLists.txt
patches/hdf-4.2.10/mfhdf/xdr/: CMakeLists.txt
patches/hdf-4.2.11/: hdf-4.2.10-REV.diff
patches/hdf-4.2.12/: hdf-4.2.12_cmake_macros.diff  hdf-4.2.12_sources.diff
patches/hdf-4.2.14/: 111-jpeg-INT32-collision.diff
toolchain.tests/: ac_test.c  def_test.c  free_test.c  gmp_test.c  iconv_test.c  incdir.txt  mkdir_test.c  mpf_test.c
(+189 files in other folders)
